fix:Adjust height and overflow properties for the unordered list in style.css

--- a/src/style.css
+++ b/src/style.css
@@ -11,8 +11,8 @@
 }
 
 ul {
-  height: 100px;
-  overflow-y: auto;
+  height: 80px;
+  overflow: auto;
   scrollbar-color: purple white;
 }
 
